# lm_studio_big_rag_plugin

./: .gitignore  .lmsignore  BENCHMARK_REPORT.md  BENCHMARK_RESULTS.md  DEPENDENCIES.md  EXAMPLES.md  FINAL_PERFORMANCE_REPORT.md  OPENAI_PROXY.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  QUICKSTART.md  README.md  TESTING.md  TOKENIZER_GUIDE.md  VECTOR_STORE_ANALYSIS.md  manifest.json  package-lock.json  package.json  rest-tools-config.example.json  tsconfig.json
.lmstudio/: dev.js
benchmarks/: chunkBatchBench.ts  chunkBench.d.ts  chunkBench.d.ts.map  chunkBench.js  chunkBench.js.map  chunkBench.ts  comprehensiveBench.ts  e2eBench.js  e2eBench.ts  embeddingBenchmark.ts  generateDataset.ts  hashBench.d.ts  hashBench.d.ts.map  hashBench.js  hashBench.js.map  hashBench.ts  hybridEmbedBench.ts  networkEmbedBench.ts  realEmbedBench.ts  realWorldBench.d.ts  realWorldBench.d.ts.map  realWorldBench.js  realWorldBench.js.map  realWorldBench.ts  runAll.d.ts  runAll.d.ts.map  runAll.js  runAll.js.map  runAll.ts  scanBench.d.ts  scanBench.d.ts.map  scanBench.js  scanBench.js.map  scanBench.ts  testUIProgress.js
native/: Cargo.toml  index.d.ts  index.js  index.js.map  index.ts  package-lock.json  package.json
native/src/: chunking.rs  hashing.rs  lib.rs  scanner.rs  tokenizer.rs
src/: cliIndex.ts  config.ts  index.ts  promptPreprocessor.ts  toolsProvider.ts
src/benchmarks/: largeChunkBench.ts  pureChunkBench.ts  realWorldBench.ts
src/ingestion/: fileScanner.ts  indexManager.ts  (+1 more)
test-fixtures/: sample.html  sample.java  sample.md  sample.txt
(+45 files in other folders)
