[package]
name = "bigrag-native"
version = "1.0.0"
edition = "2021"
description = "Native Rust performance module for BigRAG plugin"
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.16"
napi-derive = "2.16"
sha2 = "0.10"
rayon = "1.10"
walkdir = "2.5"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tokenizer for accurate token counting (cl100k_base for nomic-embed-text-v1.5)
tiktoken-rs = "0.6"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
